MD-955 improve big-menu content spacing, levels 3 and 4 on 2 columns and fix hover

--- a/assets/sass/molecules/_navbar.scss
+++ b/assets/sass/molecules/_navbar.scss
@@ -84,18 +84,37 @@
     width: 100vw;
     left: calc(-50vw + 50%);
     padding-left: calc(50vw - 50%);
-    padding-top: 40px;
+    padding-top: 15px;
     padding-bottom: 40px;
     z-index: 1;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.015), 0 2px 2px rgba(0, 0, 0, 0.015),
       0 4px 4px rgba(0, 0, 0, 0.015), 0 8px 8px rgba(0, 0, 0, 0.015),
       0 16px 16px rgba(0, 0, 0, 0.015);
 
+    .content {
+      column-count: 2;
+
+      div {
+        break-inside: avoid;
+      }
+    }
+
     a {
-      display: blocK;
+      padding-top: 25px;
+      display: block;
+      padding-bottom: 0;
+
+      &:hover,
+      &:focus,
+      &:active {
+        &:after {
+          height: 0px;
+        }
+      }
     }
 
     .small > a {
+      padding-top: 10px;
       font-weight: 300;
     }
 
